--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -9,9 +9,13 @@
                     alt="ice_cream">
                 <h3 class="products-name">ice cream</h3>
                 <div class="doted">
-                    <svg class="doted-svg" width="26" height="6">
+                    <svg class="doted-svg" width="6" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>                        
+                    </svg>
+                    <svg class="doted-svg" width="6" height="6">
                         <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
-                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
+                    </svg>
+                    <svg class="doted-svg" width="6" height="6">
                         <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
                     </svg>
                 </div>
@@ -21,7 +25,7 @@
                     aliqua facilisis.
                 </p>
                 <button type="button" class="btn button">
-                    <svg class="" width="10" height="10">
+                    <svg class="arrow-svg" width="10" height="10">
                         <use href="./images/icons/symbol-defs.svg#arrow"></use>
                     </svg>
                 </button>
@@ -33,8 +37,14 @@
                 alt="ice_cream">
                 <h3 class="products-name">ice coffee</h3>
                 <div class="doted">
-                    <svg class="" width="50" height="15">* * *
-                        <use href=""></use>
+                    <svg class="doted-svg" width="6" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
+                    </svg>
+                    <svg class="doted-svg" width="6" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
+                    </svg>
+                    <svg class="doted-svg" width="6" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
                     </svg>
                 </div>
                 <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -42,8 +52,8 @@
                     incididunt ut labore et. dolore magna
                     aliqua facilisis.
                 </p>
-                <button type="button">
-                    <svg class="" width="20" height="20">
+                <button type="button" class="btn button">
+                    <svg class="arrow-svg" width="10" height="10">
                         <use href="./images/icons/symbol-defs.svg#arrow"></use>
                     </svg>
                 </button>
@@ -55,18 +65,23 @@
                 alt="ice_cream">
                 <h3 class="products-name">milkshakes</h3>
                 <div class="doted">
-                    <svg class="" width="50" height="15">* * *
-                        <use href="">
-                        </use>
+                    <svg class="doted-svg" width="6" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
+                    </svg>
+                    <svg class="doted-svg" width="6" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
+                    </svg>
+                    <svg class="doted-svg" width="6" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
                     </svg>
                 </div>
-                <p class="about-products">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor
                     incididunt ut labore et. dolore magna
                     aliqua facilisis.
                 </p>
-                <button type="button">
-                    <svg class="" width="20" height="20">
+                <button type="button" class="btn button">
+                    <svg class="arrow-svg" width="10" height="10">
                         <use href="./images/icons/symbol-defs.svg#arrow"></use>
                     </svg>
                 </button>
