--- a/src/sass/components/products/_products.scss
+++ b/src/sass/components/products/_products.scss
@@ -1,57 +1,156 @@
 .container-products {
   padding: 100px 20px;
   background-color: #fff;
-  width: 320px;
   @extend %list;
+  @media screen and (min-width: $tablet) {
+    padding: 110px 35px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding: 120px 110px;
+  }
 }
+
 .second-name {
   font-size: 18px;
   line-height: 1.16;
+  @media screen and (min-width: $tablet) {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
   text-align: center;
   margin-bottom: 15px;
   color: rgba(255, 165, 186, 1);
   text-transform: uppercase;
 }
+
 .name-section {
+  margin-bottom: 145px;
   font-size: 34px;
   line-height: 1.14;
+  @media screen and (min-width: $tablet) {
+    font-size: 48px;
+    margin-bottom: 150px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 260px;
+    font-size: 58px;
+    line-height: 1.13;
+  }
   letter-spacing: 0.04em;
   text-align: center;
   margin-bottom: 15px;
   color: rgba(212, 20, 67, 1);
   text-transform: uppercase;
 }
+
 .products-list {
   display: block;
+  width: 100%;
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    position: relative;
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+  @media screen and (min-width: $desktop) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+.foto-products {
+  display: block;
+  transform: translateY(-65%);
+  margin-left: auto;
+  margin-right: auto;
+  width: 250px;
+  @media screen and (min-width: $tablet) {
+    width: 220px;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 330px;
+  }
 }
 .products-item {
   display: block;
-  //   position: relative;
-  padding: 40px 20px;
-  background: #ffb8ca;
+  width: 280px;
+  padding: 40px;
   border-radius: 24px;
   align-items: center;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 130px;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 130px;
+    }
+  }
+  @media screen and (min-width: $tablet) {
+    padding: 40px 10px;
+    margin-bottom: 110px;
+    width: 220px;
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+  @media screen and (min-width: $desktop) {
+    padding: 50px 45px;
+    width: 330px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+
+  &:nth-child(1) {
+    background: #ffb8ca;
+  }
+  &:nth-child(2) {
+    background: #f0d1a5;
+  }
+  &:nth-child(3) {
+    background: #c2e297;
+  }
 }
+
 .products-name {
   font-family: Titan One;
   font-weight: bold;
   font-size: 20px;
   line-height: 1.15;
-  font-size: 20px;
-  line-height: 1.15;
+  @media screen and (min-width: $desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $main-white-color;
+  margin-bottom: 30px;
+}
+.doted {
+  margin-bottom: 30px;
+}
+.doted-svg {
+  fill: $main-white-color;
 }
 .about-ice-creame {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.5;
+  margin-bottom: 30px;
+  @media screen and (min-width: $tablet) {
+    line-height: 1.78;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 1.75;
+  }
   text-align: center;
   letter-spacing: 0.04em;
   color: $main-white-color;
@@ -62,13 +161,13 @@
   padding: 15px;
   margin-right: auto;
   margin-left: auto;
+
   display: flex;
   border: none;
   border-radius: 50%;
   align-items: center;
   text-align: center;
 }
-// .foto-products {
-//   position: absolute;
-//   transform: rotateX(-50%);
-// }
+.arrow-svg {
+  fill: #d41443;
+}
