--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,7 +6,7 @@
         </p>
 
         <p class="request-invite">Оставь заявку на участие в<span class="orange-text"> бесплатном
-                занятии.</span>
+                занятии.</span><br>
             С вами свяжется консультант и ответит на вопросы
         </p>
         <form class="request-form-holder">
@@ -26,7 +26,7 @@
             <div class=" phone-groupe">
                 <a href="#" class="footer-callme">
                     <svg class="phone">
-                        <use href="./images/sprite.svg#icon-footer-tel" width="20" height="20"></use>
+                        <use href="./images/sprite.svg#icon-footer-tel"></use>
                     </svg>
                     <span class="phone-number">+38 (000) 000 00 00</span>
                 </a>
