--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -182,6 +182,7 @@
   .phone {
     width: 24px;
     height: 23px;
+    justify-content: center;
     &-groupe {
       flex-direction: row;
     }
@@ -250,10 +251,19 @@
     &-invite {
       @include font(600, 30px, 1.23, 0.08em);
       margin-bottom: 56px;
+      width: 1090px;
+      margin-left: auto;
+      margin-right: auto;
+      & br {
+        display: block;
+      }
     }
     &-title {
       @include font(800, 46px, 1.3, 0.03em);
       margin-bottom: 50px;
+      width: 1090px;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
   .footer {
@@ -267,10 +277,10 @@
     }
     &-white {
       height: 125px;
+      justify-content: center;
       & .container {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        position: relative;
       }
     }
     &-black .container {
@@ -285,7 +295,9 @@
     height: 70px;
     @include font(700, 14px, 1.214, 0.14em);
   }
-  .phone-groupe {
-    flex-direction: row;
+  .logo-footer {
+    position: absolute;
+    margin: 0;
+    left: 183px;
   }
 }
