--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1846,6 +1846,9 @@ a {
   .phone {
     width: 24px;
     height: 23px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .phone-groupe {
     -webkit-box-orient: horizontal;
@@ -1940,6 +1943,12 @@ a {
     line-height: 1.23;
     letter-spacing: 0.08em;
     margin-bottom: 56px;
+    width: 1090px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .request-invite br {
+    display: block;
   }
   .request-title {
     font-weight: 800;
@@ -1947,6 +1956,9 @@ a {
     line-height: 1.3;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
+    width: 1090px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .footer-line {
@@ -1960,17 +1972,15 @@ a {
   }
   .footer-white {
     height: 125px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footer-white .container {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: relative;
   }
   .footer-black .container {
     -webkit-box-pack: start;
@@ -1990,10 +2000,9 @@ a {
     letter-spacing: 0.14em;
   }
 
-  .phone-groupe {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+  .logo-footer {
+    position: absolute;
+    margin: 0;
+    left: 183px;
   }
 }/*# sourceMappingURL=main.css.map */
