--- a/src/partials/page-how-do.html
+++ b/src/partials/page-how-do.html
@@ -14,7 +14,7 @@
                
             </li>
             <li class="how-do-list-item">
-                <svg class="how-do-icon" width="45" height="48">
+                <svg class="how-do-icon" width="48" height="47">
                     <use href="./images/sprite.svg#Cap"></use>
                 </svg>
                 <h3 class="skills-title">Аудитория и<br />онлайн-обучение</h3>
@@ -23,7 +23,7 @@
                
             </li>
             <li class="how-do-list-item">
-            <svg class="how-do-icon" width="45" height="48">
+            <svg class="how-do-icon" width="68" height="48">
                 <use href="./images/sprite.svg#Book"></use>
             </svg>
             <h3 class="skills-title">Привычка читать на английском языке</h3>
@@ -31,17 +31,16 @@
             <p class="skills-text">Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды в неделю.</p>
             </li>
             <li class="how-do-list-item">
-                <div class="how-do-card">
-                <svg class="how-do-icon" width="45" height="48">
+                <svg class="how-do-icon" width="48" height="48">
                     <use href="./images/sprite.svg#Hand"></use>
                 </svg>
                 <h3 class="skills-title">Психологическая <br> поддержка</h3>
-                <p class="skills-text">Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности в себе.</p>
-                </div>
+                <p class="skills-text">Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности
+                    в себе.</p>
                
             </li>
             <li class="how-do-list-item">
-                <svg class="how-do-icon" width="45" height="48">
+                <svg class="how-do-icon" width="39" height="48">
                     <use href="./images/sprite.svg#Person"></use>
                 </svg>
                 <h3 class="skills-title">Обучение по авторским пособиям</h3>
@@ -50,7 +49,7 @@
                 
             </li>
             <li class="how-do-list-item">
-                <svg class="how-do-icon" width="45" height="48">
+                <svg class="how-do-icon" width="57" height="48">
                     <use href="./images/sprite.svg#Music"></use>
                 </svg>
                 <h3 class="skills-title">Умение воспринимать устную английскуб речь</h3>
