--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -2,10 +2,6 @@
   padding-top: 50px;
   padding-bottom: 50px;
   background-color: var(--primary-white-color);
-  // & .container {
-  //   margin-left: 0;
-  //   margin-right: 0;
-  // }
 }
 
 .how-do-title {
@@ -85,8 +81,8 @@
 .how-do-icon {
   display: block;
   margin: 0 auto;
-  width: 45px;
-  height: 48px;
+  // width: 45px;
+  // height: 48px;
   margin-bottom: 20px;
   fill: var(--accent-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
