--- a/src/sass/components/_guarantee.scss
+++ b/src/sass/components/_guarantee.scss
@@ -1,7 +1,7 @@
 .guarantee__section {
   padding-top: 50px;
 
-  @media screen and (min-wdth: 1344px) {
+  @media screen and (min-width: 1344px) {
     padding-top: 130px;
   }
 }
@@ -45,7 +45,7 @@
   padding-top: 30px;
   padding-bottom: 30px;
 
-  @media screen and (min-wdth: 1344px) {
+  @media screen and (min-width: 1344px) {
     padding-top: 50px;
     padding-bottom: 45px;
   }
@@ -70,21 +70,18 @@
   position: absolute;
   top: 0px;
   left: -11.5px;
-  width: 23px;
-  height: 40px;
+  width: 15px;
+  height: 30px;
   background: #f1f1f1;
-}
-@media screen and (min-wdth: 768px) {
-  .svg_container {
-    width: 15px;
-    height: 30px;
+  @media screen and (min-width: 1344px) {
+    width: 22px;
+    height: 40px;
   }
 }
-.guarantee__list-item + .guarantee__list-item {
-  @media screen and (min-wdth: 320px) {
-    margin-top: 23px;
-  }
-  @media screen and (min-wdth: 768px) {
-    margin-top: 20px;
+
+.guarantee__list-item:not(:last-child) {
+  padding-bottom: 23px;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 20px;
   }
 }
