--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -19,13 +19,20 @@
 }
 
 .footer-social-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   width: 32px;
   height: 32px;
 
+  color: #333;
   border-radius: 50%;
   background: #fea5bb;
+}
+
+.footer-social-icon {
+  fill: currentColor;
 }
 
 .footer-text-link {
