--- a/src/sass/components/locations/_locations.scss
+++ b/src/sass/components/locations/_locations.scss
@@ -42,12 +42,13 @@
         }
     }
 
-    @media screen and (min-width: $tablet) {
-        width: 220px;
-
+    @media (min-width: $tablet) and (max-width: 1199px) {
+        width: calc((100% - 40px)/3);
+        padding: 50px 32px;
+        
         &:not(:last-child) {
             margin-right: 20px;
-        }        
+        }       
     }
 
     @media screen and (min-width: $desktop) {
@@ -219,6 +220,13 @@
     @media screen and (min-width: $desktop) {
         font-size: 16px;
     }
+}
+
+.location-contacts {
+    @media screen and (min-width: $tablet) {
+        display: flex;
+        flex-wrap: wrap;    
+    } 
 }
 
 
