Десктоп готов. Извините за вольности

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,7 +13,7 @@
                 
         </div>
         
-        <div class="hero-img">
+        <div class="hero-img animate__backInRight">
             <picture class="hero-bg-picture">
                 <source srcset="./images/hero/hero-bg-desktop.webp 1x, ./images/hero/hero-bg-desktop@2x.webp 2x"
                     media="(min-width: 1280px)" type="image/webp">
