--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -15,10 +15,10 @@
   background-repeat: no-repeat;
   background-position: center bottom;
 
-  @media screen and (min-width: 768px) {
-    max-width: 1280px;
-    min-height: 496px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   max-width: 1280px;
+  //   min-height: 496px;
+  // }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -39,6 +39,8 @@
   .hero {
     background-image: url('../images/hero/vector-tablet.png');
     padding-top: 70px;
+    max-width: 1280px;
+    min-height: 496px;
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -54,6 +56,8 @@
   .hero {
     background-image: url('../images/hero/vector-desktop.png');
     padding-top: 125px;
+    max-width: 1688px;
+    min-height: 883px;
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -79,6 +83,12 @@
 
   @media screen and (min-width: 768px) {
     width: 309px;
+    margin-bottom: 92px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 609px;
+    margin-bottom: 145px;
   }
 }
 
@@ -129,6 +139,12 @@
 
 .hero-img {
   position: relative;
+
+  @media screen and (min-width: 1280px) {
+    margin-left: -51px;
+    animation-duration: 500ms;
+    animation-iteration-count: 1;
+  }
 }
 
 .hero-bg-img {
