--- a/src/partials/how-we-do-it.html
+++ b/src/partials/how-we-do-it.html
@@ -24,12 +24,12 @@
                         <use href="./images/sprite.svg#icon-mobile_learning"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
-                        Аудитория и онлайн-обучение
+                        Аудитория и <br>онлайн-обучение
                     </h3>
                     <span class="dash">&mdash;</span>
                     <p class="how-we-do-it__item-text">
                         Учитель поможет не только в аудитории, но и во время домашней
-                        подготовки. Родители могут участвовать в чате при желании
+                        подготовки. Родители могут участвовать в чате при желании.
                     </p>
                 </a>
             </li>
@@ -44,7 +44,7 @@
                     <span class="dash">&mdash;</span>
                     <p class="how-we-do-it__item-text">
                         Статьи из источников, которые используются при разработке
-                        настоящего ВНО, будут приходить на телефон дважды в неделю
+                        настоящего ВНО, будут приходить на телефон дважды в неделю.
                     </p>
                 </a>
             </li>
@@ -54,12 +54,12 @@
                         <use href="./images/sprite.svg#icon-psychology_support"></use>
                     </svg>
                     <h3 class="how-we-do-it__item-title">
-                        Психологическая поддержка
+                        Психологическая <br>поддержка
                     </h3>
                     <span class="dash">&mdash;</span>
                     <p class="how-we-do-it__item-text">
                         Мы научим тебя методикам прохождения тестирований, умению
-                        планировать свою подготовку уверенности в себе
+                        планировать свою подготовку уверенности в себе.
                     </p>
                 </a>
             </li>
@@ -75,7 +75,7 @@
                     <p class="how-we-do-it__item-text">
                         Тебе не нужно тратить время на самостоятельный поиск материала
                         и ничего покупать дополнительно. Мы составили 2 пособия для
-                        тебя
+                        тебя.
                     </p>
                 </a>
             </li>
@@ -90,7 +90,7 @@
                     <span class="dash">&mdash;</span>
                     <p class="how-we-do-it__item-text">
                         “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать и
-                        разбирать аудиозаписи в соответствии с изучаемой лексикой
+                        разбирать аудиозаписи в соответствии с изучаемой лексикой.
                     </p>
                 </a>
             </li>
