--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -9,14 +9,14 @@
   text-align: center;
   font-weight: 800;
   font-size: 20px;
-  line-height: 1.3;
+  line-height: 1.2;
   letter-spacing: 0.03em;
 }
 .skills-title {
   position: relative;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.43;
+  line-height: 1.4;
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--title-text-color);
@@ -39,7 +39,7 @@
 .skills-text {
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.666;
+  line-height: 1.6;
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--secondary-text-color);
@@ -81,15 +81,12 @@
 .how-do-icon {
   display: block;
   margin: 0 auto;
-  // width: 45px;
-  // height: 48px;
   margin-bottom: 20px;
   fill: var(--accent-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (max-width: 767px) {
   .how-do-title {
-    line-height: 1.3;
     color: var(--title-text-color);
   }
   .how-do-list-item {
@@ -116,14 +113,12 @@
 @media screen and (min-width: 768px) and (max-width: 1343px) {
   .how-do-title {
     font-size: 26px;
-    line-height: 1.31;
+    line-height: 1.2;
   }
 
   .how-do-list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -20px;
-    // margin-bottom: -27px;
   }
   .how-do-list-item {
     margin-right: 20px;
@@ -166,16 +161,17 @@
     padding-bottom: 130px;
   }
   .how-do-title {
+    display: flex;
+    width: 866px;
     font-size: 46px;
-    text-align: left;
+    line-height: 1.25;
+
     margin-bottom: 50px;
   }
   .how-do-list {
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
-    margin-right: -20px;
-    // margin-bottom: -20px;
   }
   .how-do-list-item {
     margin-right: 20px;
