--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,8 +3,13 @@
         <h2 class="feedback-title">Отзывы выпускников</h2>
         <div class="feedback-content">
             <div class="feedback-left-part">
-                <img class="feedback-picture" src="./images/reviews-mobile-1.jpg" alt="Тоня Кучеровская" width="90"
-                    height="90">
+                <picture>
+                    <source srcset="./images/reviews-tablet-desk-1.jpg 1x, ./images/reviews-tablet-desk-1.jpg 2x"
+                        media="(min-width:768px)">
+                    <source srcset="./images/reviews-mobile-1.jpg. 1x, ./images/reviews-mobile-2.jpg 2x"
+                        media="(min-width:320px)">
+                    <img class="feedback-picture" src="./images/reviews-mobile-1.jpg" alt="Тоня Кучеровская">
+                </picture>
                 <svg class="feedback-icon">
                     <use href="./images/sprite.svg#icon-reviews-vk"></use>
                 </svg>
