--- a/src/sass/layout/_our_guarantees.scss
+++ b/src/sass/layout/_our_guarantees.scss
@@ -56,13 +56,21 @@
   left: -9px;
   top: -2px;
 }
+.our-guarantees__box {
+  padding: 0 20px;
+  background-color: #f1f1f1;
+}
 
 @media screen and (min-width: 768px) {
   .our-guarantees__list {
     background-color: #f1f1f1;
+    width: 559px;
+    margin: 0 auto;
+    padding: 30px 79px;
+  }
+  .our-guarantees__box {
     width: 688px;
     margin: 0 auto;
-    padding: 30px 50px;
   }
   .our-guarantees__item {
     padding-left: 25px;
@@ -71,9 +79,9 @@
     position: absolute;
     width: 10px;
     background-color: #f1f1f1;
-    height: 33px;
+    height: 44px;
     left: -10px;
-    top: 21px;
+    top: 25px;
   }
   .our-guarantees__icon {
     left: -16px;
@@ -81,10 +89,15 @@
 }
 @media screen and (min-width: 1344px) {
   .our-guarantees__list {
-    background-color: #f1f1f1;
+    width: 1090px;
+    margin: 0 auto;
+    padding: 50px 112px;
+  }
+
+  .our-guarantees__box {
     width: 1314px;
   }
   .our-guarantees__item {
-    width: 1000px;
+    padding-left: 30px;
   }
 }
