--- a/src/sass/layout/_clients.scss
+++ b/src/sass/layout/_clients.scss
@@ -15,6 +15,9 @@
 
   color: #111518;
 }
+.clients__top-part {
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
 .clients__img {
   display: block;
   width: 90px;
@@ -52,42 +55,67 @@
   color: #b9b9b9;
 }
 .clients__second-description {
-  margin-bottom: 50px;
+  padding-bottom: 30px;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 20px;
+  line-height: 1.667;
   text-align: center;
   color: #3d3d3d;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.08em;
 }
 .clients__text-box {
   text-decoration-line: underline;
   color: #ff6b09;
 }
+.clients__list-box {
+  width: 280px;
+  height: 54px;
+}
 .clients__list {
   display: flex;
-  margin-bottom: 50px;
+  align-items: center;
 }
-.clients__item {
-  margin-bottom: 20px;
-}
+
 .clients__item:not(:last-child) {
-  padding-right: 10px;
+  margin-right: 10px;
 }
 .clients__item-none {
   display: none;
 }
 .clients__icon-left-line {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  height: 54px;
 }
 .clients__icon-right-line {
   display: flex;
+  align-items: center;
+  height: 54px;
 }
+.clients__bottom-part {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
 @media screen and (min-width: 768px) {
+  .clients__icon-right-line {
+    display: none;
+  }
+  .clients__icon-left-line {
+    display: none;
+  }
   .clients__title {
     margin-bottom: 70px;
+  }
+  .clients__name-title {
+    text-align: left;
+    margin-bottom: 20px;
   }
   .clients__img {
     display: flex;
@@ -95,5 +123,112 @@
   }
   .clients__box {
     display: flex;
+  }
+  .clients__top-part {
+    display: flex;
+  }
+  .clients__top {
+    display: flex;
+    align-items: center;
+    height: 313px;
+  }
+  .clients__icon {
+    margin-top: 20px;
+  }
+  .clients__left-side {
+    margin-right: 46px;
+  }
+  .clients__right-side {
+    width: 412px;
+  }
+  .clients__description {
+    text-align: left;
+    margin-bottom: 20px;
+  }
+  .clients__second-description {
+    width: 412px;
+    text-align: left;
+    margin-bottom: 40px;
+    padding-bottom: 30px;
+  }
+  .clients__top-part {
+    margin-left: 27px;
+    margin-right: 27px;
+  }
+  .clients__item-none {
+    display: flex;
+  }
+  .clients__bottom-part {
+    justify-content: space-around;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+  }
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .clients__icon-other-left-line,
+  .clients__icon-other-right-line {
+    display: none;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .clients__title {
+    font-size: 46px;
+    margin-bottom: 100px;
+  }
+
+  .clients__name-title {
+    font-size: 30px;
+    line-height: 1.233;
+  }
+  .clients__top-part {
+    width: 1090px;
+    margin-left: 58px;
+    margin-right: 58px;
+    margin-bottom: 40px;
+  }
+  .clients__top {
+    justify-content: space-between;
+  }
+  .clients__second-description {
+    text-align: left;
+    margin-bottom: 40px;
+  }
+  .clients__second-description {
+    width: 412px;
+    text-align: left;
+    margin-bottom: 40px;
+  }
+  .clients__second-description {
+    width: 706px;
+    margin-bottom: 51px;
+    padding-bottom: 0;
+    font-size: 18px;
+    line-height: 1.556;
+  }
+  .clients__left-side {
+    margin-right: 40px;
+    margin-left: 82px;
+  }
+  .clients__name-title {
+    text-align: left;
+  }
+  .clients__description {
+    width: 438px;
+    margin-bottom: 20px;
+    font-size: 12px;
+    line-height: 1.25;
+  }
+  .clients__icon {
+    margin-top: 20px;
+  }
+  .clients__top {
+    justify-content: center;
+  }
+  .clients__right-side {
+    width: 706px;
   }
 }
