--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -172,10 +172,14 @@
   }
 
   // =========2 секция
+  .container_main_comment {
+    padding-left: 40px;
+    padding-right: 46px;
+  }
   .comments__title {
     font-style: normal;
     font-weight: 800;
-    font-size: 20px;
+    font-size: 26px;
     line-height: 130%;
     text-align: center;
     letter-spacing: 0.03em;
@@ -183,10 +187,14 @@
     margin-bottom: 20px;
   }
   .comments-list {
+    display: flex;
+    padding-top: 40px;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
   }
   .comments .comments-main-foto__main-foto {
     // outline: 1px solid green;
+    min-width: 150px;
+    min-height: 150px;
     margin-right: auto;
     margin-left: auto;
   }
@@ -194,20 +202,17 @@
     display: block;
     font-style: normal;
     font-weight: 800;
-    font-size: 14px;
-    line-height: 1.214;
-    text-align: center;
+    font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.08em;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     color: var(--orange-color);
-    // outline: 1px solid green;
   }
   .comments-list .comments-list__info {
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.25;
-    text-align: center;
     letter-spacing: 0.08em;
     color: var(--grey-color);
     margin-bottom: 10px;
@@ -217,8 +222,8 @@
     // outline: 1px solid green;
     width: 30px;
     height: 30px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    // margin-bottom: 20px;
     margin-right: auto;
     margin-left: auto;
   }
@@ -227,14 +232,14 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 20px;
-    text-align: center;
     color: var(--mob-grey-color);
   }
 
   .comments-list__item {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 30px;
+    padding-left: auto;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    text-align: left;
   }
 
   .comments-list__description span {
@@ -242,7 +247,8 @@
     color: var(--orange-color);
     text-decoration: underline;
   }
-  // =========
+  // ==================================================
+  // ==============================================================
   .comments-under__list {
     margin-top: 20px;
     margin-bottom: 200px;
