--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -39,7 +39,7 @@
         <h2 class="comments__title">Отзывы выпускников</h2>
         <div class="comments__container">
             <ul class="comments-list list">
-                <div class="conta">
+                <div class="container_main_comment">
                     <li class="comments-list__main-foto">
                         <img class="comments-main-foto__main-foto" src="./images/comments/tonya_kucherovskaya.png"
                             width="90" height="90" alt="фото Тоня Кучерявская">
