--- a/src/partials/our_guarantees.html
+++ b/src/partials/our_guarantees.html
@@ -3,7 +3,7 @@
     <div class="our-guarantees__box">
         <ul class="our-guarantees__list">
             <li class="our-guarantees__item our-guarantees__icon-line">
-                <svg class="our-guarantees__icon" width="14" height="20">
+                <svg class="our-guarantees__icon" >
                     <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
                 </svg>
                 Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании.
@@ -11,7 +11,7 @@
                 мы вернем деньги.<span class="our-guarantees__slogan">*</span>
             </li>
             <li class="our-guarantees__item our-guarantees__icon-line">
-                <svg class="our-guarantees__icon" width="14" height="20">
+                <svg class="our-guarantees__icon" >
                     <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
                 </svg>
                 Ты научишься писать сочинения минимум на 10 баллов из 14.<span class="our-guarantees__slogan"> В то время как
@@ -19,14 +19,14 @@
                     учеников получили за сочинение 0.</span>
             </li>
             <li class="our-guarantees__item our-guarantees__icon-line">
-                <svg class="our-guarantees__icon" width="14" height="20">
+                <svg class="our-guarantees__icon" >
                     <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
                 </svg>
                 Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после
                 формирования команд.
             </li>
             <li class="our-guarantees__item">
-                <svg class="our-guarantees__icon" width="14" height="20">
+                <svg class="our-guarantees__icon" >
                     <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
                 </svg>
                 Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем
