--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -148,12 +148,37 @@
     }
     &-content {
       width: 1090px;
-      padding: 40px;
+      padding: 50px 112px 50px 82px;
       margin: 0 auto 40px auto;
     }
     &-title {
       @include font(800, 46px, 1.3, 0.03em);
       margin-bottom: 50px;
     }
+    &-username {
+      @include font(800, 30px, 1.23, 0.08em);
+      margin-bottom: 10px;
+      text-align: start;
+    }
+    &-text {
+      @include font(500, 18px, 1.56, 0.08em);
+      text-align: start;
+      &-light {
+        @include font(500, 14px, 1.214, 0.08em);
+        text-align: start;
+      }
+      &-orange {
+        @include font(500, 18px, 1.56, 0.08em);
+      }
+    }
+    &-righr-part {
+      width: 706px;
+    }
+  }
+  .arrow-left {
+    left: 60px;
+  }
+  .arrow-right {
+    right: 60px;
   }
 }
