--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -55,7 +55,7 @@
     }
   }
 }
-.request-form-holder .btn {
+.btn {
   width: 260px;
   height: 48px;
   background-color: var(--b-accent-background);
