--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1528,7 +1528,7 @@ a {
   }
   .feedback-content {
     width: 1090px;
-    padding: 40px;
+    padding: 50px 112px 50px 82px;
     margin: 0 auto 40px auto;
   }
   .feedback-title {
@@ -1537,6 +1537,45 @@ a {
     line-height: 1.3;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
+  }
+  .feedback-username {
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 1.23;
+    letter-spacing: 0.08em;
+    margin-bottom: 10px;
+    text-align: start;
+  }
+  .feedback-text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.08em;
+    text-align: start;
+  }
+  .feedback-text-light {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.08em;
+    text-align: start;
+  }
+  .feedback-text-orange {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.08em;
+  }
+  .feedback-righr-part {
+    width: 706px;
+  }
+
+  .arrow-left {
+    left: 60px;
+  }
+
+  .arrow-right {
+    right: 60px;
   }
 }
 .request-form {
@@ -1659,7 +1698,7 @@ a {
   color: var(--txt-orange);
 }
 
-.request-form-holder .btn {
+.btn {
   width: 260px;
   height: 48px;
   background-color: var(--b-accent-background);
@@ -1682,7 +1721,7 @@ a {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-.request-form-holder .btn:hover, .request-form-holder .btn:focus {
+.btn:hover, .btn:focus {
   background-color: transparent;
   color: var(--txt-orange);
   border: 2px solid var(--b-accent-background);
