--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -130,6 +130,9 @@
   .comments-under__item:nth-child(-n + 3) {
     margin-right: 10px;
   }
+  .comments-under__item:nth-child(n + 5) {
+    display: none;
+  }
 }
 // =============================================================================================
 // ==================================================================================================
@@ -266,7 +269,11 @@
     max-height: 30px;
   }
 
-  .comments-under__item:nth-child(-n + 3) {
-    margin-right: 10px;
+  .comments-under__item:nth-child(-n + 7) {
+    margin-right: 30px;
   }
 }
+
+// .comments-under__right-arrow {
+//   display: none;
+// }
