--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -96,13 +96,36 @@
                     alt="фото Тоня Кучерявская">
             </li>
 
+            <li class="comments-under__item">
+                <img class="comments-under-foto__under-foto" src="./images/comments/girl_4.png" width="54" height="54"
+                    alt="фото Тоня Кучерявская">
+            </li>
+            
+            <li class="comments-under__item">
+                <img class="comments-under-foto__under-foto" src="./images/comments/girl_5.png" width="54" height="54"
+                    alt="фото Тоня Кучерявская">
+            </li>
+            
+            <li class="comments-under__item">
+                <img class="comments-under-foto__under-foto" src="./images/comments/girl_6.png" width="54" height="54"
+                    alt="фото Тоня Кучерявская">
+            </li>
+
+            <li class="comments-under__item">
+                <img class="comments-under-foto__under-foto" src="./images/comments/girl_7.png" width="54" height="54"
+                    alt="фото Тоня Кучерявская">
+            </li>
+
             <li class="comments-under__right-arrow">
                 <a href="#">
                     <svg class="comments-under__icon-right-arrow">
                         <use href="./images/sprite.svg#icon-arrow_right" width="20" height="20"></use>
                     </svg>
                 </a>
-            </li>
+            </li>            
+            
+                             
+                
         </ul>
     </div>
 </section>
