--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -10,7 +10,7 @@
   }
   @include font(800, 20px, 1.3);
   letter-spacing: 0.03em;
-  color: #ffffff;
+  color: var(--white-color);
   margin-bottom: 30px;
 }
 .features-list {
@@ -22,7 +22,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   counter-reset: section;
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
 .features-item::before {
@@ -30,7 +30,7 @@
   content: '—  0' counter(section);
   @include font(700, 14px, 1.2);
   letter-spacing: 0.08em;
-  color: #ff6b09;
+  color: var(--accent-color);
 }
 .features-description {
   @include font(700, 14px, 1.71);
