--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -14,7 +14,7 @@
   @include font(800, 20px, 1.35);
   letter-spacing: 0.03em;
   white-space: pre-line;
-  color: #ffffff;
+  color: var(--white-color);
   margin-bottom: 27px;
 }
 .problems-word {
@@ -31,7 +31,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   counter-reset: section;
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
 
@@ -40,7 +40,7 @@
   content: '—  0' counter(section);
   @include font(700, 14px, 1.2);
   letter-spacing: 0.08em;
-  color: #ff6b09;
+  color: var(--accent-color);
   margin: 0;
 }
 
