--- a/src/sass/components/locations/_locations.scss
+++ b/src/sass/components/locations/_locations.scss
@@ -52,8 +52,19 @@
     }
 
     @media screen and (min-width: $desktop) {
-        width: 330px;
+        width: calc((100% - 60px)/3);
+        padding: 52px 44px 61px;
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        }  
     }
+
+    &:hover,
+    &:focus {
+      box-shadow: 0px 8px 40px $dark-pink-color;
+      transition: 600ms cubic-bezier(0.4, 0, 0.2, 1);
+    }  
 }
 
 .location-institution-truck {
@@ -219,6 +230,11 @@
 
     @media screen and (min-width: $desktop) {
         font-size: 16px;
+    }
+
+    &:hover,
+    &:focus {
+      color: $main-red-color;
     }
 }
 
