--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -9,11 +9,11 @@
   text-align: center;
 
   color: $primaryWhiteColor;
-  background-color: #d41342;
   border-radius: 22px;
   border: none;
 
   &.buton-location {
+    background-color: #d41342;
     width: 181px;
     margin-bottom: 10px;
   }
@@ -23,6 +23,8 @@
     height: 24px;
     font-size: 8px;
     line-height: 1.25;
+
+    background-color: $titleTextColor;
   }
 }
 
