--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -2,16 +2,45 @@
   background-color: $dark-background;
   padding-top: 38px;
   padding-bottom: 550px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url(../../src/images/our-program/png/program-mobile.png);
+  background-repeat: no-repeat;
+  background-position: 100% 75%;
+  background-size: 121px;
+
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+    screen and (min-resolution: 192dpi) and (min-width: 320px),
+    screen and (min-resolution: 2dppx) and (min-width: 320px) {
+    background-image: url(../../src/images/our-program/png/program-mobile@2x.png);
+  }
 
   @media screen and (min-width: 768px) {
     padding-top: 40px;
     padding-bottom: 412px;
+    background-image: url(../../src/images/our-program/png/program-tablet.png);
+    background-size: 384px;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+    screen and (min-resolution: 192dpi) and (min-width: 768px),
+    screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    background-image: url(../../src/images/our-program/png/program-tablet@2x.png);
   }
 
   @media screen and (min-width: 1344px) {
     position: relative;
     padding-top: 120px;
     padding-bottom: 363px;
+    background-image: url(../../src/images/our-program/png/program-desktop.png);
+    background-size: 500px;
+    background-position: 0% 76%;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
+    screen and (min-resolution: 192dpi) and (min-width: 1344px),
+    screen and (min-resolution: 2dppx) and (min-width: 1344px) {
+    background-image: url(../../src/images/our-program/png/program-desktop@2x.png);
   }
 }
 
@@ -44,8 +73,8 @@
   padding-left: 26px;
 
   @media screen and (max-width: 767px) {
-    width: 194px;
-    margin-left: auto;
+    // width: 194px;
+    margin-left: 74px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1343px) {
@@ -89,7 +118,8 @@
   content: '';
   position: absolute;
   display: block;
-  height: 1177px;
+  height: 1170px;
+  height: 92%;
   width: 2px;
   left: 0;
   top: 12px;
@@ -167,6 +197,7 @@
   @media screen and (min-width: 1344px) {
     font-size: 20px;
     line-height: 1.64;
+    padding-left: 30px;
   }
 }
 
@@ -180,7 +211,12 @@
   background-color: $accent-text-color;
   margin-right: 5px;
   height: 1px;
-  width: 10px;
+  width: 12px;
+
+  @media screen and (min-width: 1344px) {
+    height: 2px;
+    width: 20px;
+  }
 }
 
 .objects-item {
