стили для секций problems&we-do-it

--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -1,7 +1,9 @@
-.container {
-    padding-top: 50px;
+.problem-section-container {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto; 
 }
-
 .problem {
     margin-bottom: 148px;
     min-width: 320px;
@@ -9,13 +11,14 @@
     padding-bottom: 205px;
     background-color: #111518;
 }
+
 .problem-title {
-    padding: 50px 20px 0;
+    padding-top: 50px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
-    line-height: 1.35;    
+    line-height: 1.36;    
     letter-spacing: 0.03em;
     
     color: #FFFFFF;  
@@ -29,6 +32,7 @@
     position: relative;
     padding: 20px 14px 20px 30px;
     max-width: 280px;
+    max-height: 488px;
     top: 27px;
     margin: 0 auto;
 
@@ -41,9 +45,9 @@
     margin-bottom: 5px;
     font-family: Montserrat;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1.2;
     letter-spacing: 0.08em;
     
     color: #FF6B09;
@@ -62,7 +66,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.714;
+    line-height: 1.42;
 
     letter-spacing: 0.08em;
     
@@ -90,62 +94,59 @@
 }
 
 @media screen and (min-width: 768px) {
-
-    .container {
+    .problem-section-container {
         max-width: 768px;
-        padding: 60px 40px 0 40px;
+        margin: 0 auto;
     }
-
-    .problem {
-        margin-bottom: 152px;
-        min-width: 768px;
-        height: 340px;
-        padding-bottom: 189px;
-        background-color: #111518;
-    }
-    
-    .problem-title {
-        padding: 60px 40px 0;
-    }
-    
-    .problem-list-container {
-        position: relative;
-        padding: 30px 96px;
-        max-width: 688px;
-        top: 25px;
-    
-        background-color: #FFFFFF;
-        box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-        margin-bottom: 50px;
-    }
-
-
-    .problem-list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        margin-top: -22px;
-        margin-left: -22px;
-    }
-
-   .problem-list > .problem-item {
-       flex-basis: calc(100% / 2 - 22px);
-       margin-top: 22px;
-       margin-right: 22px;
-   }
-   .problem-item {
-       max-width: 286px;
-       height: 69px;
-   }
-    
+   .problem {
+    margin-bottom: 152px;
+    min-width: 768px;
+    height: 340px;
+    padding-bottom: 189px;
+    background-color: #111518;
 }
 
-@media screen and (min-width:1316px){
-    .container {
-        max-width: 1316px;
-        padding: 100px 183px 0 183px;
-    }
+.problem-title {
+    padding-top: 60px;
+    font-size: 26px;
+    line-height: 1.3;  
+    text-align: start;  
+}
 
+.problem-list-container {
+    position: relative;
+    padding: 30px 49px 26px 96px;
+    max-width: 688px;
+    max-height: 303px;
+    top: 25px;
+    margin: 0 auto;
+
+    background-color: #FFFFFF;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
+
+.problem-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -10px;
+    margin-left: -10px;
+}
+
+.problem-item {
+    line-height: 1.714;
+}
+.problem-list > .problem-item {
+    flex-basis: calc(100% / 2 - 10px);
+    margin-top: 10px;
+    margin-left: 10px;
+}
+}
+
+@media screen and (min-width:1316px) {
+    .problem-section-container {
+        max-width: 1316px;
+        margin: 0 auto;
+    }
     .problem {
         margin-bottom: 150px;
         min-width: 1680px;
@@ -155,28 +156,23 @@
     }
 
     .problem-title {
-        padding: 100px 183px 0;
-        font-family: Montserrat;
-        font-weight: 800;
+        padding-top: 100px;
+        text-align: start;
         font-size: 46px;
         line-height: 1.3;    
-        letter-spacing: 0.03em;
-        
-        color: #FFFFFF;  
-        
-        &-item {        
-            color: #FF6B09;
-        }
     }
+    
     .problem-list-container {
         position: relative;
         padding: 70px 112px 62px 114px;
         max-width: 1314px;
+        max-height: 362px;
         top: 70px;
+        margin: 0 auto;
     
         background-color: #FFFFFF;
         box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-        margin-bottom: 130px;
+        // margin-bottom: 130px;
     }
 
 
@@ -185,30 +181,33 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        margin-top: -40px;
-        margin-left: -40px;
+        margin-top: -32px;
+        margin-left: -32px;
     }
 
    .problem-list > .problem-item {
-       flex-basis: calc(100% / 3 - 40px);
-       margin-top: 40px;
-       margin-right: 40px;
+       flex-basis: calc(100% / 3 - 32px);
+       margin-top: 32px;
+       margin-left: 32px;
    }
 
    .problem-item {
-       max-width: 336px;
        font-weight: 700;
        font-size: 20px;
-       line-height: 1.4;
+       line-height: 1.2;
        letter-spacing: 0.08em;
    }
 
    .problem-item-number {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.64;
+    line-height: 1.65;
     letter-spacing: 0.08em;
     align-items: center;
    }
+
+//    .problems-picture {
+       
+//    }
 
 }
