--- a/src/sass/components/_we_do_it.scss
+++ b/src/sass/components/_we_do_it.scss
@@ -1,13 +1,13 @@
 .container {
+    margin-top: 50px;
     margin-bottom: 50px;
 }
 .doit {
     display: flex;
-
 }
 
 .doit-title {
-    margin-bottom: 30px 10px 20px;
+    margin-bottom: 30px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
@@ -25,7 +25,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    
 }
 
 .doit-item {
@@ -33,7 +35,7 @@
     padding: 0 5px 20px;
     width: 280px;
     height: 280px;
-    padding: 30px;
+    padding: 30px 5px 10px;
     background: #FFFFFF;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
@@ -46,14 +48,13 @@
     &:focus {
         background: #FF6B09;
     }
-
 }
+
 .doit-svg {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
-
 }
 
 .doit-svg-item {
@@ -71,7 +72,7 @@
     margin-bottom: 42px;
     font-family: Montserrat;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.43;
 
@@ -97,12 +98,8 @@
         right: 0;
         bottom: -35px;
 
-        font-family: Montserrat;
-        font-style: normal;
-        font-weight: 700;
         font-size: 20px;
         line-height: 1.65;
-        letter-spacing: 0.08em;
         
         color: #FF6B09;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -111,9 +108,7 @@
         .doit-item:focus & {
             color: #FFFFFF;
         }
-
     }
-
 }
 
 .doit-svg-explain {
@@ -134,15 +129,19 @@
     .doit-item:focus & {
         color: #FFFFFF;
     }   
-    
 }
 
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
-        padding: 60px 40px 0 40px;
+        margin-top: 50px;
+        margin-bottom: 50px;
     }
-
+    .doit-title {
+        font-size: 26px;
+        line-height: 1.3;
+    }
+    
     .doit-list {
         display: flex;
         flex-direction: row;
@@ -151,12 +150,11 @@
         align-items: center;
         margin-top: -20px;
         margin-left: -20px;
-        margin-bottom: 27px;
     }
 
     .doit-item {
         display: block;
-        padding: 40px 15px 0;
+        padding: 40px 13px 5px;
         width: 334px;
         height: 334px;
         background: #FFFFFF;
@@ -171,47 +169,47 @@
         &:focus {
             background: #FF6B09;
         }
-    
     }
     .doit-list > .doit-item {
         flex-basis: calc(100% / 2 - 20px);
         margin-left: 20px;
         margin-top: 20px;
     }
-}
 
+    .doit-svg-title {
+        margin-bottom: 52px;
+    }
+}
 
 
 @media screen and (min-width: 1316px) {
     .container {
         max-width: 1316px;
-        padding: 100px 100px 0 100px;
+        margin-top: 130px;
         margin-bottom: 130px;
     }
+
     .doit-title {
-        margin-bottom: 50px;
-        text-align: start;
-        font-weight: 800;
         font-size: 46px;
         line-height: 1.3;
-        letter-spacing: 0.03em;
+        text-align: start;
     }
+    
     .doit-list {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        margin-top: -10px;
-        margin-left: -10px;
-        margin-bottom: 20px;
+        margin-top: -20px;
+        margin-left: -20px;
     }
 
     .doit-item {
         display: block;
         padding: 40px 30px 55px;
-        min-width: 424px;
-        min-height: 396px;
+        width: 425px;
+        height: 396px;
         background: #FFFFFF;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
         box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
@@ -224,13 +222,17 @@
         &:focus {
             background: #FF6B09;
         }
-    
     }
     .doit-list > .doit-item {
-        flex-basis: calc(100% / 3 - 10px);
-        margin-left: 10px;
-        margin-top: 10px;
+        flex-basis: calc(100% / 3 - 20px);
+        margin-left: 20px;
+        margin-top: 20px;
     }
+
+    .doit-svg-title {
+        margin-bottom: 32px;
+    }
+
     .doit-svg-title {
         font-weight: 700;
         font-size: 20px;
