--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -66,7 +66,8 @@
         </div>
       </li>
     </ul>
-        <button class="button buton-location">Our Locations</button>
+        <button class="button button-location">Our Locations</button>
         <button class="button-secondary button-Franchise">Franchise</button>
   </div>
 </section>
+ 
