--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -112,7 +112,7 @@
   // =========
   .comments-under__list {
     margin-top: 20px;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: center;
   }
@@ -254,7 +254,7 @@
   // ==============================================================
   .comments-under__list {
     margin-top: 20px;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: center;
   }
@@ -273,7 +273,152 @@
     margin-right: 30px;
   }
 }
+@media screen and (min-width: 1344px) {
+  .garant__title {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 130%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
 
-// .comments-under__right-arrow {
-//   display: none;
-// }
+  .feature-list {
+    display: block;
+    margin-left: 183px;
+    margin-right: 183px;
+    background-color: var(--grey-bcg-color);
+  }
+  .feature-list__item:not(:last-child) {
+    margin-bottom: 23px;
+  }
+  .feature-list__item {
+    text-align: justify;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 20px;
+    padding-right: 50px;
+    padding-left: 79px;
+    background-repeat: no-repeat;
+    background-image: url('../images/campfire.svg');
+  }
+
+  .feature-list__description span {
+    color: var(--orange-color);
+  }
+  .feature-list__description {
+    display: inline-block;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.4;
+  }
+
+  // =========2 секция
+  .comments {
+    display: flex;
+    justify-content: center;
+  }
+  .container_main_comment {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .comments__title {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 130%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+  .comments-list {
+    // display: flex;
+    padding-top: 40px;
+    // margin-left: 210px;
+    // margin-right: 212px;
+
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
+  }
+  .comments .comments-main-foto__main-foto {
+    // outline: 1px solid green;
+    min-width: 150px;
+    min-height: 150px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .comments-list__name {
+    display: block;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+    margin-bottom: 20px;
+    color: var(--orange-color);
+  }
+  .comments-list .comments-list__info {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.25;
+    letter-spacing: 0.08em;
+    color: var(--grey-color);
+    margin-bottom: 10px;
+  }
+
+  .comments-list .comments-list-icon__vk {
+    // outline: 1px solid green;
+    width: 30px;
+    height: 30px;
+    margin-top: 20px;
+    // margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .comments-list__description {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 20px;
+    color: var(--mob-grey-color);
+  }
+
+  .comments-list__item {
+    padding-left: auto;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    text-align: left;
+  }
+
+  .comments-list__description span {
+    display: inline-block;
+    color: var(--orange-color);
+    text-decoration: underline;
+  }
+  // ==================================================
+  // ==============================================================
+  .comments-under__list {
+    margin-top: 20px;
+    margin-bottom: 50px;
+    // display: flex;
+    justify-content: center;
+  }
+  .comments-under__icon-left-arrow {
+    margin-right: 30px;
+    max-width: 25px;
+    max-height: 30px;
+  }
+  .comments-under__icon-right-arrow {
+    margin-left: 30px;
+    max-width: 25px;
+    max-height: 30px;
+  }
+
+  .comments-under__item:nth-child(-n + 7) {
+    margin-right: 30px;
+  }
+}
