almost everything is done

--- a/src/sass/components/products/_products.scss
+++ b/src/sass/components/products/_products.scss
@@ -9,10 +9,16 @@
     padding: 120px 110px;
   }
 }
-
 .second-name {
+  display: block;
+  font-family: Titan One;
   font-size: 18px;
   line-height: 1.16;
+  text-align: center;
+  margin-bottom: 15px;
+  color: rgba(255, 165, 186, 1);
+  text-transform: uppercase;
+  margin-bottom: 15px;
   @media screen and (min-width: $tablet) {
     font-size: 26px;
     line-height: 1.15;
@@ -21,16 +27,16 @@
     font-size: 30px;
     line-height: 1.13;
   }
-  text-align: center;
-  margin-bottom: 15px;
-  color: rgba(255, 165, 186, 1);
-  text-transform: uppercase;
 }
 
 .name-section {
   margin-bottom: 145px;
   font-size: 34px;
   line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: rgba(212, 20, 67, 1);
+  text-transform: uppercase;
   @media screen and (min-width: $tablet) {
     font-size: 48px;
     margin-bottom: 150px;
@@ -40,17 +46,11 @@
     font-size: 58px;
     line-height: 1.13;
   }
-  letter-spacing: 0.04em;
-  text-align: center;
-  margin-bottom: 15px;
-  color: rgba(212, 20, 67, 1);
-  text-transform: uppercase;
 }
 
 .products-list {
   display: block;
   width: 100%;
-
   @media screen and (min-width: $tablet) {
     display: flex;
     position: relative;
@@ -66,7 +66,7 @@
 }
 .foto-products {
   display: block;
-  transform: translateY(-65%);
+  transform: translateY(-45%);
   margin-left: auto;
   margin-right: auto;
   width: 250px;
@@ -80,7 +80,7 @@
 .products-item {
   display: block;
   width: 280px;
-  padding: 40px;
+
   border-radius: 24px;
   align-items: center;
   text-align: center;
@@ -92,21 +92,17 @@
     }
   }
   @media screen and (min-width: $tablet) {
-    padding: 40px 10px;
-    margin-bottom: 110px;
     width: 220px;
     &:not(:last-child) {
       margin-right: 20px;
     }
   }
   @media screen and (min-width: $desktop) {
-    padding: 50px 45px;
     width: 330px;
     &:not(:last-child) {
       margin-right: 30px;
     }
   }
-
   &:nth-child(1) {
     background: #ffb8ca;
   }
@@ -117,7 +113,20 @@
     background: #c2e297;
   }
 }
-
+.products-content {
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  @media screen and (min-width: $tablet) {
+    padding-left: 11px;
+    padding-right: 11px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-left: 44px;
+    padding-right: 44px;
+    padding-bottom: 50px;
+  }
+}
 .products-name {
   font-family: Titan One;
   font-weight: bold;
@@ -161,12 +170,15 @@
   padding: 15px;
   margin-right: auto;
   margin-left: auto;
-
   display: flex;
   border: none;
   border-radius: 50%;
   align-items: center;
   text-align: center;
+  &:hover,
+  &:focus {
+    background: #ecebeb;
+  }
 }
 .arrow-svg {
   fill: #d41443;
