Добавляет стили моб версии our-guarantes

--- a/src/partials/our-guarantees.html
+++ b/src/partials/our-guarantees.html
@@ -4,8 +4,8 @@
        
         <div class="our-guarantees__bcg">
             <ul class="our-guarantees__list">
-                <li>
-                    <div class="our-guarantees__item">
+                <li class="our-guarantees__item">
+                   
                         <svg class="our-guarantees__icon_fire">
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
@@ -15,10 +15,10 @@
                             мы вернем деньги.<span class="our-guarantees__item-accent">*</span>
                         </p>
                     
-                    </div>
+                    
                 </li>
-                <li>
-                    <div class="our-guarantees__item">
+                <li class="our-guarantees__item">
+                    
                         <svg class="our-guarantees__icon_fire">
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
@@ -26,10 +26,10 @@
                         Ты научишься писать сочинения минимум на 10 баллов из 14. <span class="our-guarantees__item-accent">В то время как 20%
                         учеников получили за сочинение 0.</span>
                        </p>  
-                    </div>
+                    
                 </li>
-                <li>
-                    <div class="our-guarantees__item">
+                <li class="our-guarantees__item">
+                   
                         <svg class="our-guarantees__icon_fire">
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
@@ -38,10 +38,10 @@
                             формирования команд.
                         </p>
                     
-                    </div>
+                    
                 </li>
-                <li>
-                    <div class="our-guarantees__item">
+                <li class="our-guarantees__item">
+                    
                         <svg class="our-guarantees__icon_fire">
                             <use href="./images/sprite.svg#icon-fire"></use>
                         </svg>
@@ -50,7 +50,7 @@
                             особенности каждого ученика.
                         </p>
                     
-                    </div>
+                    
                 </li>
             </ul>
         </div>
