--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -77,6 +77,7 @@ html {
     display: none;
     &.is-open {
       display: block;
+      overflow-y: auto;
     }
   }
   @media (min-width: 768px) {
@@ -180,6 +181,18 @@ html {
 
   .menu-button.is-open & {
     display: none;
+  }
+}
+.menu-container-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 18;
+  width: 100vw;
+  height: 100vh;
+  .menu-container.is-open + & {
+    display: block;
   }
 }
 
