--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -11,6 +11,7 @@
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  color: var(--title-text-color);
 }
 .skills-title {
   position: relative;
@@ -86,10 +87,8 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (max-width: 767px) {
-  .how-do-title {
-    color: var(--title-text-color);
-  }
   .how-do-list-item {
+    line-height: 1.3;
     width: 280px;
     height: 280px;
     margin: 0 auto;
@@ -113,12 +112,13 @@
 @media screen and (min-width: 768px) and (max-width: 1343px) {
   .how-do-title {
     font-size: 26px;
-    line-height: 1.2;
+    line-height: 1.16;
   }
 
   .how-do-list {
     display: flex;
     flex-wrap: wrap;
+    margin-right: -20px;
   }
   .how-do-list-item {
     margin-right: 20px;
@@ -172,6 +172,7 @@
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
+    margin-right: -20px;
   }
   .how-do-list-item {
     margin-right: 20px;
